added a description to sap_system field

--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -200,3 +200,4 @@ $defs:
           type: string
       sap_system:
         type: boolean
+        description: Indicates if SAP is installed on the system
