Add sap_sids fact

--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -232,3 +232,11 @@ $defs:
       sap_system:
         type: boolean
         description: Indicates if SAP is installed on the system
+      sap_sids:
+        type: array
+        items:
+          description: The SAP system ID (SID)
+          type: string
+          example: "H2O"
+          maxLength: 3
+          pattern: '^[A-Z][A-Z0-9]{2}$'
