--- a/.spectral.yaml
+++ b/.spectral.yaml
@@ -11,18 +11,18 @@ rules:
         match: '^[a-z]+[a-z0-9_]*[a-z0-9]+$'
 
   property-description:
-    description: Every non-array property should define a description
+    description: Every non-array type should define a description
     message: "{{path}} does not define description"
-    given: $..properties[?(@.type != 'array')]
+    given: $..[?(@property=='items' || (@parentProperty=='properties' && @.type != 'array'))]
     severity: error
     then:
       field: description
       function: truthy
 
   property-example:
-    description: Every scalar property (except for boolean) should define an example
+    description: Every string or numeric property should define an example
     message: "{{path}} does not define an example"
-    given: $..properties[?(@.type != 'array' && @.type != 'object' && @.type != 'boolean')]
+    given: $..[?((@property=='items' || @parentProperty=='properties') && (@.type == 'string' || @.type == 'integer' || @.type == 'number'))]
     severity: error
     then:
       field: example
@@ -43,6 +43,13 @@ except:
   'schemas/system_profile/v1.yaml#/$defs/DnfModule/properties/name': ['property-example', 'property-description']
   'schemas/system_profile/v1.yaml#/$defs/DnfModule/properties/stream': ['property-example', 'property-description']
   'schemas/system_profile/v1.yaml#/$defs/InstalledProduct/properties/name': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/$defs/NetworkInterface/properties/ipv4_addresses/items': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/$defs/NetworkInterface/properties/ipv6_addresses/items': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/cpu_flags/items': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/kernel_modules/items': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/running_processes/items': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/installed_services/items': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/enabled_services/items': ['property-example', 'property-description']
   'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/number_of_cpus': ['property-example', 'property-description']
   'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/number_of_sockets': ['property-example', 'property-description']
   'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/cores_per_socket': ['property-example', 'property-description']
