Limit Disk Device options keys
Used propertyNames to describe non-empty kes for
/disk_devices/options. This is compatible with Draft >=6 only.

--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -19,11 +19,8 @@ $defs:
           uid: "0"
           ro: true
         type: object
-        properties:
-          name:
-            type: string
-          value:
-            type: string
+        propertyNames:
+          minLength: 1
       mount_point:
         description: mount point
         example: "/mnt/remote_nfs_shares"
