--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -3,6 +3,7 @@ $id: system_profile.spec.yaml
 $schema: https://json-schema.org/draft/2019-09/schema#
 $defs:
   NestedObject:
+    description: An arbitrary object that doesn’t allow empty string keys.
     propertyNames:
       minLength: 1
     additionalProperties:
