Disk device options (#14)
* Limit Disk Device options keys

Used propertyNames to describe non-empty kes for
/disk_devices/options. This is compatible with Draft >=6 only.

* Describe DiskDevice options

/disk_devices/options is an arbitrary object that does not allow empty
string keys. This constraint applies to all nested objects. Created a NestedObject entity that recursively defines this constraint.

* Add description to NestedObject

Co-authored-by: Jozef Hartinger <jozefhartinger@gmail.com>

--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -2,6 +2,12 @@
 $id: system_profile.spec.yaml
 $schema: https://json-schema.org/draft/2019-09/schema#
 $defs:
+  NestedObject:
+    description: An arbitrary object that doesn’t allow empty string keys.
+    propertyNames:
+      minLength: 1
+    additionalProperties:
+      "$ref": "#/$defs/NestedObject"
   DiskDevice:
     description: Representation of one mounted device
     properties:
@@ -18,12 +24,7 @@ $defs:
         example:
           uid: "0"
           ro: true
-        type: object
-        properties:
-          name:
-            type: string
-          value:
-            type: string
+        "$ref": "#/$defs/NestedObject"
       mount_point:
         description: mount point
         example: "/mnt/remote_nfs_shares"
