--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -1,6 +1,6 @@
 ---
 $id: system_profile.spec.yaml
-$schema: https://json-schema.org/draft/2019-09/schema#
+$schema: http://json-schema.org/draft-07/schema#
 $defs:
   NestedObject:
     description: An arbitrary object that doesn’t allow empty string keys.
