--- a/.spectral.yaml
+++ b/.spectral.yaml
@@ -101,4 +101,5 @@ except:
   'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/captured_date': ['property-example', 'property-description']
   'schemas/system_profile/v1.yaml#/$defs/NestedObject': ['property-arbitrary-object-without-keys']
   'schemas/system_profile/v1.yaml#/$defs/DiskDevice/properties/options': ['property-arbitrary-object-without-keys']
-
+  'schemas/system_profile/v1.yaml#/$defs/NetworkInterface/properties/ipv4_addresses/items': ['property-string-max-length']
+  'schemas/system_profile/v1.yaml#/$defs/NetworkInterface/properties/ipv6_addresses/items' ['property-string-max-length']
