--- a/.spectral.yaml
+++ b/.spectral.yaml
@@ -102,4 +102,4 @@ except:
   'schemas/system_profile/v1.yaml#/$defs/NestedObject': ['property-arbitrary-object-without-keys']
   'schemas/system_profile/v1.yaml#/$defs/DiskDevice/properties/options': ['property-arbitrary-object-without-keys']
   'schemas/system_profile/v1.yaml#/$defs/NetworkInterface/properties/ipv4_addresses/items': ['property-string-max-length']
-  'schemas/system_profile/v1.yaml#/$defs/NetworkInterface/properties/ipv6_addresses/items' ['property-string-max-length']
+  'schemas/system_profile/v1.yaml#/$defs/NetworkInterface/properties/ipv6_addresses/items': ['property-string-max-length']
