--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -51,7 +51,7 @@ $defs:
         type: boolean
       enabled:
         type: boolean
-      baseurl:
+      base_url:
         type: string
         format: uri
         maxLength: 2048
