--- a/.spectral.yaml
+++ b/.spectral.yaml
@@ -28,6 +28,34 @@ rules:
       field: example
       function: truthy
 
+  property-string-max-length:
+    description: Every string type should define a max length
+    message: "{{path}} does not define max length"
+    given: $..[?((@property=='items' || @parentProperty=='properties') && @.type == 'string')]
+    severity: error
+    then:
+      field: maxLength
+      function: truthy
+
+  property-field-sentence:
+    description: Description of a field should be a sentence
+    message: "{{path}} is not a sentence"
+    given: $..[?(@property=='description')]
+    severity: error
+    then:
+      function: pattern
+      functionOptions:
+        match: '^[A-Z]+\S*(?:\s+\S+){2,}\s*$'
+
+  property-arbitrary-object-without-keys:
+    description: Every object should have defined keys
+    message: "{{path}} is an object without defined keys"
+    given: $..[?(@.type == 'object')]
+    severity: error
+    then:
+      field: properties
+      function: truthy
+
 # TODO: remove these exceptions as we clean up the schema and clarify  in RHCLOUD-8147
 except:
   'schemas/system_profile/v1.yaml#/$defs/DiskDevice/properties/device': ['property-example', 'property-description']
@@ -71,5 +99,7 @@ except:
   'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/insights_client_version': ['property-example', 'property-description']
   'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/insights_egg_version': ['property-example', 'property-description']
   'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/captured_date': ['property-example', 'property-description']
-
-
+  'schemas/system_profile/v1.yaml#/$defs/NestedObject': ['property-arbitrary-object-without-keys']
+  'schemas/system_profile/v1.yaml#/$defs/DiskDevice/properties/options': ['property-arbitrary-object-without-keys']
+  'schemas/system_profile/v1.yaml#/$defs/NetworkInterface/properties/ipv4_addresses/items': ['property-string-max-length']
+  'schemas/system_profile/v1.yaml#/$defs/NetworkInterface/properties/ipv6_addresses/items': ['property-string-max-length']
