--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -256,3 +256,15 @@ $defs:
         maxLength: 256
         description: Current profile resulting from command tuned-adm active
         example: 'desktop'
+      selinux_current_mode:
+        type: string
+        enum: [enforcing, permissive, disabled]
+        maxLength: 10
+        description: The current SELinux mode, either enforcing, permissive, or disabled
+        example: 'enforcing'
+      selinux_config_file:
+        type: string
+        enum: [enforcing, permissive, disabled]
+        maxLength: 10
+        description: The SELinux mode provided in the config file
+        example: 'permissive'
