--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -251,6 +251,18 @@ $defs:
           example: "H2O"
           maxLength: 3
           pattern: '^[A-Z][A-Z0-9]{2}$'
+      sap_instance_number:
+        type: string
+        description: The instance number of the SAP HANA system (a two-digit number between 00 and 97)
+        example: '03'
+        maxLength: 2
+        pattern: '(?!99)(?!98)^[0-9]{2}$'
+      sap_version:
+        type: string
+        description: The version of the SAP HANA lifecycle management program
+        example:  '1.00.122.04.1478575636'
+        maxLength: 22
+        pattern: '^[0-9].[0-9]{2}.[0-9]{3}.[0-9]{2}.[0-9]{10}$'
       tuned_profile:
         type: string
         maxLength: 256
