add mexLen on major/minor

--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -14,8 +14,10 @@ $defs:
     properties:
       major:
         type: integer
+        maxLength: 4
       minor:
         type: integer
+        maxLength: 4
       name:
         type: string
         enum: ["RHEL", "SLES", "SLED"]
