Changing to only include major, minor, name
And limiting the enums
- we don't want to support more than we need
- these fields are not required, exporters can still submit something lacking these
- we can extend the os obj further

--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -19,14 +19,9 @@ $defs:
         type: integer
         maxLength: 4
       name:
+        description: Name of the distro/os
         type: string
-        enum: ["RHEL", "SLES", "SLED"]
-      vendor:
-        type: string
-        enum: ["Red Hat", "CentOS", "Debian", "Canonical"]
-      modification:
-        type: string
-        enum: ["server", "desktop", "workstation"]
+        enum: ["RHEL"]
   DiskDevice:
     description: Representation of one mounted device
     type: object
