--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -245,6 +245,7 @@ $defs:
         description: Indicates if SAP is installed on the system
       sap_sids:
         type: array
+        uniqueItems: true
         items:
           description: The SAP system ID (SID)
           type: string
