Reverting previous commit
Linter forces a maxlen even on enums

--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -27,6 +27,7 @@ $defs:
         description: Name of the distro/os
         example: RHEL
         type: string
+        maxLength: 4
         enum: ["RHEL"]
   DiskDevice:
     description: Representation of one mounted device
