--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -17,12 +17,14 @@ $defs:
         description: Major release of OS (aka the x version)
         example: 6
         type: integer
-        maxLength: 4
+        minimum: 0
+        maximum: 99
       minor:
         description: Minor release of OS (aka the y version)
         example: 8
         type: integer
-        maxLength: 4
+        minimum: 0
+        maximum: 99
       name:
         description: Name of the distro/os
         example: RHEL
