--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -9,6 +9,28 @@ $defs:
       minLength: 1
     additionalProperties:
       "$ref": "#/$defs/NestedObject"
+  OperatingSystem:
+    description: Object for OS details
+    type: object
+    properties:
+      major:
+        description: Major release of OS (aka the x version)
+        example: 6
+        type: integer
+        minimum: 0
+        maximum: 99
+      minor:
+        description: Minor release of OS (aka the y version)
+        example: 8
+        type: integer
+        minimum: 0
+        maximum: 99
+      name:
+        description: Name of the distro/os
+        example: RHEL
+        type: string
+        maxLength: 4
+        enum: ["RHEL"]
   DiskDevice:
     description: Representation of one mounted device
     type: object
@@ -165,6 +187,8 @@ $defs:
           type: string
           maxLength: 30
         type: array
+      operating_system:
+        $ref: '#/$defs/OperatingSystem'
       os_release:
         type: string
         maxLength: 100
