--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -151,8 +151,10 @@ $defs:
     type: object
     properties:
       owner_id:
+        description: A UUID associated with the host's RHSM certificate
         type: string
         pattern: '[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}'
+        example: 22cd8e39-13bb-4d02-8316-84b850dc5136
       number_of_cpus:
         type: integer
       number_of_sockets:
