According to convo SIDs have to be uniq on a system (#28)
Co-authored-by: Jozef Hartinger <jozefhartinger@gmail.com>
Co-authored-by: Asa Price <aprice@redhat.com>

--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -273,6 +273,7 @@ $defs:
         description: Indicates if SAP is installed on the system
       sap_sids:
         type: array
+        uniqueItems: true
         items:
           description: The SAP system ID (SID)
           type: string
