Fixing NestedObject definition (#35)
* Fixing NestedObject definition

* using oneOf

* add type of NestedObject

--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -8,7 +8,10 @@ $defs:
     propertyNames:
       minLength: 1
     additionalProperties:
-      "$ref": "#/$defs/NestedObject"
+      oneOf:
+        - "$ref": "#/$defs/NestedObject"
+        - not:
+            type: object
   DiskDevice:
     description: Representation of one mounted device
     type: object
