feat(sysprofile): Add satellite_id schema
Puptoo can send the satellite_id of a host and we currently do not have
this accounted for in the schema.

Signed-off-by: Stephen Adams <tsadams@gmail.com>

--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -235,6 +235,11 @@ $defs:
         type: boolean
       satellite_managed:
         type: boolean
+      satellite_id:
+        type: string
+        pattern:  '[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}'
+        example: "5957b010-b6c4-4019-a84c-f7e304ebbb42"
+        maxLength: 36
       cloud_provider:
         type: string
         maxLength: 100
