--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -146,7 +146,7 @@ $defs:
         maxLength: 36
         example: 22cd8e39-13bb-4d02-8316-84b850dc5136
       rhc_config_state:
-        description: The config manager's config-state UUID.
+        description: A UUID associated with the config manager state
         type: string
         pattern: '[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}'
         maxLength: 36
