--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -272,7 +272,7 @@ $defs:
           $ref: '#/$defs/InstalledProduct'
       insights_client_version:
         type: string
-        description: the version number of insights client. supports wildcards
+        description: The version number of insights client. supports wildcards
         x-wildcard: true
         maxLength: 50
       insights_egg_version:
