Fix parsing error in xjoin-search mapping updater (#75)
* add title to SystemProfile to fix parsing error in xjoin-search mapping updater

* change title

--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -176,6 +176,7 @@ $defs:
         example: False
         type: boolean
   SystemProfile:
+    title: SystemProfile
     description: Representation of the system profile fields
     type: object
     properties:
