Add initial system_purpose fields schema

--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -440,3 +440,18 @@ $defs:
             example: "8.1"
             type: string
             maxLength: 255
+      system_purpose_usage:
+        description: TODO
+        type: string
+        maxLength: 64
+        example: TODO
+      system_purpose_role:
+        description: TODO
+        type: string
+        maxLength: 64
+        example: TODO
+      system_purpose_sla:
+        description: TODO
+        type: string
+        maxLength: 64
+        example: Premium
