--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -441,17 +441,17 @@ $defs:
             type: string
             maxLength: 255
       system_purpose_usage:
-        description: TODO
+        description: The intended usage of the system
         type: string
-        maxLength: 64
-        example: TODO
+        maxLength: 17
+        enum: ['Production', 'Development/Test', 'Disaster Recovery']
       system_purpose_role:
-        description: TODO
+        description: The intended role of the system
         type: string
-        maxLength: 64
-        example: TODO
+        maxLength: 37
+        enum: ['Red Hat Enterprise Linux Server', 'Red Hat Enterprise Linux Workstation', 'Red Hat Enterprise Linux Compute Node']
       system_purpose_sla:
-        description: TODO
+        description: The intended SLA of the system
         type: string
-        maxLength: 64
-        example: Premium
+        maxLength: 12
+        enum: ['Premium', 'Standard', 'Self-Support']
