--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -103,14 +103,14 @@ $defs:
         type: array
         items:
           description: The ipv4 address of the system
-          example: "123.456.789.012 123.456.789.012 123.456.789.012, 123.456.789.012 123.456.789.012, 123.456.789.012"
+          example: "227.161.169.210 30.143.76.153 233.87.178.7, 60.209.47.155 40.124.217.134, 67.77.119.70"
           type: string
           format: ipv4
       ipv6_addresses:
         type: array
         items:
           description: The ipv6 address of the system
-          example: "0123:4567:89ab:cdef:0123:4567:89ab:cdef , abcd:4567:89ab:cdef:0123:4567:89ab:cdef , qwer:4567:89ab:cdef:0123:4567:89ab:cdef"
+          example: "8886:2565:f753:1bbb:1d08:4239:c470:a889, dd2e:879f:afff:7845:b346:bb88:bcf2:4b1b, e979:3081:7218:4c98:fd19:5777:309a:957b"
           type: string
           format: ipv6
       mtu:
@@ -178,9 +178,11 @@ $defs:
       booted:
         description: Whether the deployment is currently booted
         type: boolean
+        example: true
       pinned:
         description: Whether the deployment is currently pinned
         type: boolean
+        example: false
   SystemProfile:
     title: SystemProfile
     description: Representation of the system profile fields
@@ -447,13 +449,13 @@ $defs:
         enum: [edge]
         maxLength: 4
         description: Indicates the type of host.
-        example: 'edge, not_edge, edge'
+        example: 'edge, edge, edge'
       greenboot_status:
         type: string
         enum: [red, green]
         maxLength: 5
         description: Indicates the greenboot status of an edge device.
-        example: 'green, red, green'
+        example: 'green, red, purple'
       greenboot_fallback_detected:
         type: boolean
         description: Indicates whether greenboot detected a rolled back update on an edge device.
