--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   },
   "homepage": "https://github.com/RedHatInsights/inventory-schemas.git#readme",
   "dependencies": {
-    "@stoplight/spectral": "^5.6.0"
+    "@stoplight/spectral-cli": "^6.3.0"
   }
 }
