--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -413,7 +413,7 @@ $defs:
           sap_system:
             type: boolean
             description: Indicates if SAP is installed on the system
-          sap_sids:
+          sids:
             type: array
             uniqueItems: true
             items:
@@ -422,13 +422,13 @@ $defs:
               example: "H2O, ABC, XYZ"
               maxLength: 3
               pattern: '^[A-Z][A-Z0-9]{2}$'
-          sap_instance_number:
+          instance_number:
             type: string
             description: The instance number of the SAP HANA system (a two-digit number between 00 and 99)
             example: '03, 05, 99'
             maxLength: 2
             pattern: '^[0-9]{2}$'
-          sap_version:
+          version:
             type: string
             description: The version of the SAP HANA lifecycle management program
             example:  '1.00.122.04.1478575636, 2.00.122.04.1478575636, 3.00.122.04.1478575636'
