Add new field to test validator

--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -593,3 +593,9 @@ $defs:
         maxLength: 10
         enum: [dnf, rpm-ostree, yum]
         example: "dnf, rpm-ostree, yum"
+      test_field:
+        description: Field created to test the SP validator job (DO NOT MERGE)
+        type: string
+        maxLength: 3
+        enum: [foo, bar]
+        example: "foo, bar"
