RHINENG-19154: add "status" to "dnf_modules" sp fact
Signed-off-by: Xiaoxue Wang <xiaoxwan@redhat.com>

--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -83,6 +83,14 @@ $defs:
         type: string
         maxLength: 2048
         example: "abc, dfg, pop"
+      status:
+        type: array  # technically a set, ordering is not important
+        items:
+          description: The module stream's status
+          type: string
+          maxLength: 64
+          enum: [default, enabled, installed]
+          example: "default, enabled, installed"
   InstalledProduct:
     description: Representation of one installed product
     type: object
