update captured-date field to be datetime
rh-pre-commit.version: 2.3.2
rh-pre-commit.check-secrets: ENABLED

--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -474,9 +474,8 @@ $defs:
         x-dynamic: true
       captured_date:
         type: string
-        maxLength: 32
-        example: "ex1, ex2, ex3"
-        x-dynamic: true
+        format: date-time
+        maxLength: 50
       installed_packages:
         type: array  # technically a set, ordered by RPM sorting algorithm
         items:
